syntax = "proto3";
package mychain.dex.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "mychain/dex/v1/params.proto";

option go_package = "mychain/x/dex/types";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}
