syntax = "proto3";

package mychain.maincoin.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "mychain/maincoin/v1/params.proto";
import "mychain/maincoin/v1/segment_history.proto";

option go_package = "mychain/x/maincoin/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mychain/maincoin/v1/params";
  }

  // CurrentPrice Queries a list of CurrentPrice items.
  rpc CurrentPrice(QueryCurrentPriceRequest) returns (QueryCurrentPriceResponse) {
    option (google.api.http).get = "/mychain/maincoin/v1/current_price";
  }

  // SegmentInfo Queries a list of SegmentInfo items.
  rpc SegmentInfo(QuerySegmentInfoRequest) returns (QuerySegmentInfoResponse) {
    option (google.api.http).get = "/mychain/maincoin/v1/segment_info";
  }
  
  // SegmentHistory queries purchase history for a specific segment
  rpc SegmentHistory(QuerySegmentHistoryRequest) returns (QuerySegmentHistoryResponse) {
    option (google.api.http).get = "/mychain/maincoin/v1/segment_history/{segment_number}";
  }
  
  // UserPurchaseHistory queries purchase history for a specific user
  rpc UserPurchaseHistory(QueryUserPurchaseHistoryRequest) returns (QueryUserPurchaseHistoryResponse) {
    option (google.api.http).get = "/mychain/maincoin/v1/user_history/{address}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryCurrentPriceRequest defines the QueryCurrentPriceRequest message.
message QueryCurrentPriceRequest {}

// QueryCurrentPriceResponse defines the QueryCurrentPriceResponse message.
message QueryCurrentPriceResponse {
  string price = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// QuerySegmentInfoRequest defines the QuerySegmentInfoRequest message.
message QuerySegmentInfoRequest {}

// QuerySegmentInfoResponse defines the QuerySegmentInfoResponse message.
message QuerySegmentInfoResponse {
  uint64 current_epoch = 1;
  string current_price = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string total_supply = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string reserve_balance = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string tokens_needed = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string reserve_ratio = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string dev_allocation_total = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// QuerySegmentHistoryRequest is the request type for Query/SegmentHistory
message QuerySegmentHistoryRequest {
  uint64 segment_number = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QuerySegmentHistoryResponse is the response type for Query/SegmentHistory
message QuerySegmentHistoryResponse {
  SegmentHistory segment_history = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryUserPurchaseHistoryRequest is the request type for Query/UserPurchaseHistory
message QueryUserPurchaseHistoryRequest {
  string address = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryUserPurchaseHistoryResponse is the response type for Query/UserPurchaseHistory
message QueryUserPurchaseHistoryResponse {
  UserPurchaseHistory user_history = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
